docs: update HANDOVER.md
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012BJujgAUPam9rLF8UhU5Cf